# tributary

./: CMakeLists.txt  LICENSE  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
src/: example-session.sql  query_farm_telemetry.cpp  tributary_config.cpp  tributary_exception.cpp  tributary_extension.cpp  tributary_logging.cpp  tributary_scan_topic.cpp  tributary_schema_registry.cpp  tributary_schema_registry_delete_subject.cpp  tributary_schema_registry_delete_subject_version.cpp  tributary_schema_registry_get_schema_by_guid.cpp  tributary_schema_registry_get_schema_by_subject_and_id.cpp  tributary_schema_registry_get_schema_by_version.cpp  tributary_schema_registry_get_schema_latest.cpp  tributary_schema_registry_register_schema.cpp  tributary_schema_registry_subjects.cpp  tributary_schema_registry_versions.cpp  tributary_secrets.cpp
src/include/: query_farm_telemetry.hpp  tributary_config.hpp  tributary_exception.hpp  tributary_extension.hpp  tributary_logging.hpp  tributary_scan_topic.hpp  tributary_schema_registry.hpp  tributary_secrets.hpp
test/: README.md
test/sql/: quack.test  tributary.test
vcpkg-overlay/schemaregistry/: portfile.cmake  usage  vcpkg.json
